ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.2.0-rc0, 7.0.26, 8.0.16
    • Affects Version/s: None
    • Component/s: None
    • None
    • Query Optimization
    • ALL
    • v8.1, v8.0, v7.0, v6.0
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      After a long field path is splitted into parts by '.' as the delimiter, the number of parts could exceed 255. This may hit an invariant crashing the server. We should have a proper check and return an error to the user.

            Assignee:
            Ruoxin Xu (Inactive)
            Reporter:
            Ruoxin Xu (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: