SERVER-103960 Impose a proper check on the FieldRef to ensure the number of parts not exceeding 255 (#36515)

GitOrigin-RevId: 3d45e335ecfbd662b1bc825918df316ea5a7a54c